--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.21.2",
     "stripe": "^12.18.0",
     "tailwind-merge": "^3.0.2"
