Add comprehensive SEO and AI visibility enhancements
- Add robots.txt with sitemap reference and AI crawler permissions
- Create XML sitemap for all pages with proper priorities
- Implement JSON-LD structured data:
  - Organization + MedicalWebPage + Product schema on homepage
  - FAQPage schema with 13 Q&A pairs
  - MedicalWebPage, HowTo, and Article schemas for knowledge base
- Add JSON feed for health articles
- Configure Netlify headers for proper content types
- Update all URLs to use actual domain: https://bper.me/

These changes will improve search engine visibility, enable rich snippets,
and make content more accessible to AI systems.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,31 @@
   functions = "functions"
   publish = "."
 
+# Headers for better SEO and security
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "SAMEORIGIN"
+    X-XSS-Protection = "1; mode=block"
+
+# Proper content types for SEO files
+[[headers]]
+  for = "/robots.txt"
+  [headers.values]
+    Content-Type = "text/plain; charset=UTF-8"
+
+[[headers]]
+  for = "/sitemap.xml"
+  [headers.values]
+    Content-Type = "application/xml; charset=UTF-8"
+
+[[headers]]
+  for = "/feed.json"
+  [headers.values]
+    Content-Type = "application/feed+json; charset=UTF-8"
+    Access-Control-Allow-Origin = "*"
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
